# ibus-table-boshiamy

./: .gitignore  AUTHORS  AUTHORS.in  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  ibus-table-boshiamy_1.6.0.orig.tar.gz.delta  ibus-table-boshiamy_1.6.0.orig.tar.gz.id
.github/workflows/: ci.yaml  debian.yaml
debian/: changelog  control  gbp.conf  rules  watch
debian/source/: options
icons/: Makefile.in
m4/: Makefile.in
tables/: Makefile.in  boshiamy.txt.in  mapping.txt.in  tou.sh
tables/cns11643/: CNS2UNICODE_Unicode 15.txt  CNS2UNICODE_Unicode 2.txt  CNS2UNICODE_Unicode BMP.txt
